Bug fix: add z-index to about this project info popover in header to prevent hiding it at back Add z-index to dialog box, place it behind popover

--- a/styles/board.css
+++ b/styles/board.css
@@ -23,4 +23,5 @@
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0px 2px 10px var(--shadow-gray);
+  z-index: 90;
 }
